# cognitive-mind

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: deploy.yml
src/: main.rs  upstash.rs
