[package]
name = "cognitive-mind"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cognitive-mind"
path = "src/main.rs"

[dependencies]
tokio            = { version = "1",  features = ["full"] }
tokio-tungstenite = "0.21"
tungstenite      = "0.21"
futures-util     = "0.3"
futures          = "0.3"
serde            = { version = "1",  features = ["derive"] }
serde_json       = "1"
postgres         = "0.19"
tokio-postgres   = "0.7"
uuid             = { version = "1",  features = ["v4"] }
chrono           = { version = "0.4", features = ["serde"] }
dashmap          = "5"
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum             = { version = "0.7", features = ["ws"] }
axum-extra       = "0.9"
tower            = "0.4"
tower-http       = { version = "0.5", features = ["cors","trace"] }
tokio-stream     = "0.1"
reqwest          = { version = "0.12", features = ["json"] }
anyhow           = "1"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
